sistemato scroll playlist e fix footer overflow

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ a {
 .wrapper {
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
 .clear_fix {
@@ -146,6 +147,13 @@ footer {
   width: 100%;
   height: 90px;
   background-color: #282828;
-  float:left;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 
+}
+@media screen and (max-height: 610px) {
+  #playlists ul {
+    height: 40%;
+  }
 }
